--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
 
     <groupId>mr-grass-master</groupId>
     <artifactId>mgm</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
     <name>mgm</name>
     <description>Spring Boot Web App</description>
     <properties>
@@ -19,6 +20,7 @@
     </properties>
 
     <dependencies>
+        <!--Includes spring-boot-starter-tomcat-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -81,6 +83,10 @@
                         </exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.1</version>
             </plugin>
         </plugins>
     </build>
