--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
     port: 5000
 
-spring:
-    datasource:
-        password: password
-        url: jdbc:postgresql://localhost:5432/postgres
-        username: postgres
-    jpa:
-        show-sql: true
+#spring:
+#    datasource:
+#        password: password
+#        url: jdbc:postgresql://localhost:5432/postgres
+#        username: postgres
+#    jpa:
+#        show-sql: true
 
 date:
     zone: 'Pacific/Auckland'
