--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
     port: 5000
 
 spring:
+    profiles:
+        active: dev
     datasource:
         url: jdbc:postgresql://awseb-e-kpwydzbynn-stack-awsebrdsdatabase-cnzuh4otatuv.ch5uitkaqwlh.ap-southeast-2.rds.amazonaws.com:5432/ebdb
 #        url: jdbc:postgresql://localhost:5432/postgres
@@ -9,6 +11,21 @@ spring:
         password: password
     jpa:
         show-sql: false
+date:
+    zone: 'Pacific/Auckland'
+
+---
+
+spring:
+    profiles:
+        active: test
+    datasource:
+        url: jdbc:h2:mem:mydb;INIT=RUNSCRIPT FROM 'src/test/resources/schema.sql';
+        username: sa
+        password: password
+    sql:
+        init:
+            mode: always
 
 date:
     zone: 'Pacific/Auckland'
