[MGM] Authentication not working

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -20,6 +20,10 @@ spring:
         init:
             mode: always
 
+    thymeleaf:
+        servlet:
+            produce-partial-output-while-processing: false
+
 #logging.level:
 #    org.springframework.security: TRACE
 
@@ -29,3 +33,4 @@ logging:
 
 date:
     zone: 'Pacific/Auckland'
+
