--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,29 +3,26 @@ server:
 
 spring:
     datasource:
-#        url: jdbc:postgresql://localhost:5432/postgres
-#        username: postgres
-#        password: password
-        url: jdbc:h2:mem:test;
-        driverClassName: org.h2.Driver
-        username: sa
+        url: jdbc:postgresql://localhost:5432/postgres
+        username: postgres
         password: password
-
-    jpa:
-        show-sql: false
-        hibernate:
-            ddl-auto: create
-
+#        url: jdbc:h2:mem:test;
+#        driverClassName: org.h2.Driver
+#        username: sa
+#        password: password
     sql:
-        init:
-            mode: always
+      init:
+        mode: always
 
     thymeleaf:
         servlet:
             produce-partial-output-while-processing: false
 
+database:
+  embedded: false
+
 logging.level:
-    org.springframework.security: TRACE
+    org.springframework.security: trace
 
 logging:
     file:
@@ -33,4 +30,3 @@ logging:
 
 date:
     zone: 'Pacific/Auckland'
-
