--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>mgm</groupId>
     <artifactId>mr-grass-master</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <version>2.0-SNAPSHOT</version>
     <name>mgm</name>
     <description>Spring Boot Web App</description>
