[MGM] Added CustomCorsFilter. Endpoints working as expected

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -39,7 +39,12 @@ date:
     zone: 'Pacific/Auckland'
 
 client:
-  domain: 'http://localhost:4200'
+  domain: 'http://localhost:4201'
+
+authenticate:
+  path:
+    - "/admin/view-next"
+    - "/admin/delete"
 
 app:
   jwt:
