--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ server:
     port: 8080
 
 spring:
-    datasource:
+  datasource:
         url: jdbc:postgresql://localhost:5432/postgres
         username: postgres
         password: password
@@ -11,25 +11,28 @@ spring:
 #        username: sa
 #        password: password
 
-    jpa:
+
+  thymeleaf:
+      check-template-location: false
+      servlet:
+        produce-partial-output-while-processing: false
+
+  jpa:
       open-in-view: false
 
-    sql:
+  sql:
       init:
         mode: always
 
-    thymeleaf:
-        servlet:
-            produce-partial-output-while-processing: false
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: '*'
 
-logging.level:
-    org.springframework.security: trace
+#logging.level:
+#    org.springframework.security: info
 
 logging:
     file:
@@ -45,6 +48,7 @@ authenticate:
   path:
     - "/admin/view-next"
     - "/admin/delete"
+    - "/admin/logout"
 
 app:
   jwt:
