--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,12 @@
                 <artifactId>logback-classic</artifactId>
                 <version>1.4.8</version>
             </dependency>
+        <!-- Used in PrintRequestFilter to parse InputStream -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.12.0</version>
+        </dependency>
     </dependencies>
 
     <build>
