--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,12 @@
             <artifactId>commons-io</artifactId>
             <version>2.12.0</version>
         </dependency>
+        <!-- Captcha -->
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-recaptchaenterprise</artifactId>
+            <version>3.26.0</version>
+        </dependency>
     </dependencies>
 
     <build>
