SignupControllerTest unit tests

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -33,7 +33,7 @@ authenticate:
     path:
       - "/admin/view-next"
       - "/admin/delete"
-      - "/admin/logout"
+      - "/custom-logout"
 
 app:
   jwt:
