--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -22,7 +22,7 @@ spring:
 
   jpa:
     open-in-view: false
-
+    defer-datasource-initialization: true
   sql:
     init:
       mode: always
@@ -45,7 +45,7 @@ authenticate:
   path:
     - "/admin/view-next"
     - "/admin/delete"
-    - "/admin/logout"
+    - "/custom-logout"
 
 app:
   jwt:
