--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>mgm</groupId>
     <artifactId>mr-grass-master</artifactId>
-<!--    <packaging>war</packaging>-->
+    <!--    <packaging>war</packaging>-->
     <version>2.2</version>
     <name>mgm</name>
     <description>Web Server</description>
@@ -87,14 +87,14 @@
         </dependency>
         <!-- Development/test -->
         <!--Automatic restart for development-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-devtools</artifactId>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-devtools</artifactId>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-<!--            <scope>test</scope>-->
+            <!--            <scope>test</scope>-->
         </dependency>
         <!--JSON parser-->
         <dependency>
@@ -155,11 +155,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.7</version>
         </dependency>
-            <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-classic</artifactId>
-                <version>1.5.2</version>
-            </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.2</version>
+        </dependency>
         <!-- Used in PrintRequestFilter to parse InputStream -->
         <dependency>
             <groupId>commons-io</groupId>
@@ -172,8 +172,16 @@
             <artifactId>google-cloud-recaptchaenterprise</artifactId>
             <version>3.26.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
